Agregar en .gitignore una carpeta local
Agregar en .gitignore una carpeta local para uso personales

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/node
-# Edit at https://www.toptal.com/developers/gitignore?templates=node
+# agregar carpeta de trabajo local
+.workspace/
 
 ### Node ###
 # Logs
