--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,9 @@
 	"editor.tabSize": 4,
 	"editor.insertSpaces": false,
 	"editor.detectIndentation": false,
-	"editor.formatOnSave": false
+	"editor.formatOnSave": false,
+
+    // Encoding por defecto del workspace (UTF-8 para archivos modernos)
+    "files.encoding": "utf8",
+    "files.autoGuessEncoding": false
 }
