--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,9 @@
 
     // Encoding por defecto del workspace (UTF-8 para archivos modernos)
     "files.encoding": "utf8",
-    "files.autoGuessEncoding": false
+    "files.autoGuessEncoding": false,
+
+    // Fin de línea
+    "files.eol": "\r\n",
+    "files.trimTrailingWhitespace": false
 }
