Se agrega el tema para el proyecto

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     // ============================================================
+    // TEMA - Apariencia
+    // ============================================================
+    "workbench.colorTheme": "Default Dark Modern",
+    
+    // ============================================================
     // EDITOR - Configuración general del editor
     // ============================================================
     "editor.tabSize": 4,
